--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "smoke": "node ./scripts/smoke.mjs"
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.1",
