--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "@supabase/supabase-js": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "resend": "^6.0.3",
     "react-markdown": "latest",
-    "remark-gfm": "latest",
     "rehype-sanitize": "latest",
+    "remark-gfm": "latest",
+    "resend": "^6.0.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
